--- a/_posts/2019-08-18-train.md
+++ b/_posts/2019-08-18-train.md
@@ -7,8 +7,8 @@ tags:
 ---
 
 现在在到韦庄的火车上。
-![fig 1](/IMG_20190818_120618.jpg) 
-![fig 2](/IMG_20190818_131715.jpg) 
+![fig 1](/blog/IMG_20190818_120618.jpg) 
+![fig 2](/blog/IMG_20190818_131715.jpg) 
 
 ***
 [return](https://www.tsinghuamakerxian.cn/) 
